2005-03-24  Tom Tromey  <tromey@redhat.com>

	* builtins.cc (map_type): Call pushdecl.
	(map_class_object): Likewise.
	(add): Likewise.
	* hooks.hh (pushdecl): Declare.
	(all_decls): Declare.
	* decl.cc (pushdecl): No longer static.
	(all_decls): Updated comment.

2005-03-24  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_cast): Use convert and not fold_convert.

2005-03-24  Tom Tromey  <tromey@redhat.com>

	* tree.cc (build_class_ref): Handle array types.
	(build_new_object_array): Use build_class_ref.
	* abi.cc (build_class_reference): Added assertion.

2005-03-24  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_for): Use 'result' when building BIND_EXPR.
	Fixed order of arguments.

2005-03-24  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_array_initializer): Build COMPOUND_EXPRs, not a
	statement list.  Lay out array class.

2005-03-24  Tom Tromey  <tromey@redhat.com>

	* abi.cc (build_method_call): Strip abstract methods.

2005-03-23  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_switch_block): Annotate case exprs.  Link label
	into statement stream.
	(visit_switch): Create label for end of 'switch'.

2005-03-23  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_field_initializer): Don't build a COMPONENT_REF.

2005-03-23  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_try): Annotate statement.

2005-03-23  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_new_array): Handle array initializers properly.
	(visit_array_initializer): Create new array here.
	(build_new_object_array): Lay out array class.  Use
	build_class_reference.

2005-03-23  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_catch): Prepare catch type.

2005-03-23  Tom Tromey  <tromey@redhat.com>

	* abi.cc (build_method_call): Don't use virtual dispatch for
	private methods.
	(get_vtable_index): Return -1 for private methods.

2005-03-23  Tom Tromey  <tromey@redhat.com>

	* abi.cc (build_method_call): Handle interface invocation.